# SynapseScanner

./: .gitignore  CHANGELOG.md  README.md  USAGE.md  post_announcement.py  pyproject.toml  synapse.bat
.github/workflows/: ci.yml  release.yml
src/: cli_extras.py  universal_scanner.py  whitelist.json
synapsescanner/: __init__.py  cli_extras.py  universal_scanner.py
