[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapsescanner"
version = "1.2.0"
description = "Fast, click-through CLI for open-access research papers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "CrazhHolmes"},
]
keywords = ["cli", "research", "arxiv", "open-access", "science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/CrazhHolmes/SynapseScanner"
Repository = "https://github.com/CrazhHolmes/SynapseScanner"
Changelog = "https://github.com/CrazhHolmes/SynapseScanner/blob/main/CHANGELOG.md"

[project.scripts]
synapsescanner = "synapsescanner.universal_scanner:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
synapsescanner = ["whitelist.json"]
